--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,7 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/db_employee
-spring.datasource.username = root
-spring.datasource.password =
-
-
+spring.datasource.url = jdbc:mysql://db4free.net:3306/employee_db1
+spring.datasource.username = employee_db1
+spring.datasource.password = employee_db1
 
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-
-spring.thymeleaf.cache=false
-spring.thymeleaf.enabled=true
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
