--- a/webclient/package.json
+++ b/webclient/package.json
@@ -37,6 +37,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^0.6.8",
     "@angular/cli": "6.0.0",
     "@angular/compiler-cli": "6.0.0",
     "@angular/language-service": "6.0.0",
@@ -56,7 +57,6 @@
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "2.7.2",
-    "webpack-bundle-analyzer": "^2.11.1",
-    "@angular-devkit/build-angular": "~0.6.0"
+    "webpack-bundle-analyzer": "^2.11.1"
   }
 }
